Fixed copy changes on all text

--- a/index.html
+++ b/index.html
@@ -897,8 +897,8 @@
                 "visible": true,
                 "position": [-0.02, -0.54, 0.28],
                 "headline": "Intrument Touch Screen, Phadia Prime Software, Status Indicator Light",
-                "text": "all relevant information is available at the hands of the operator via the intrument's Phadia Prime enabled 9 inch touch screen",
-                "valuemessage": "all relevant information is available at the hands of the operator via the intrument's Phadia Prime enabled 9 inch touch screen",
+                "text": "all relevant information is available at the hands of the operator via the intrument's Phadia Prime enabled 9\" inch touch screen",
+                "valuemessage": "All relevant information is available at the hands of the operator via the intrument's Phadia Prime enabled 9\" inch touch screen",
                 "infotext": [
                     "Extensive instrument self-check and monitoring to ensure quality of test results",
                     "Operated via the instrument touchscreen and networked Phadia Prime PC's",
@@ -910,35 +910,37 @@
                 "video": "Phadia200_HotSpot_03",
                 "visible": true,
                 "position": [0.0, -0.26, 0.46],
-                "headline": "Reagent Rack",
-                "text": "Holds both reagents and controls and features automatic barcode scanning",
-                "valuemessage": "Holds both reagents and controls and features automatic barcode scanning",
-                "infotext": []
+                "headline": "Climate-Controlled Processing Chamber",
+                "text": "Maintains a temperature of 37 C with controlled humidity for optimal ImmunoCAP™ and EliA™ testing conditions",
+                "valuemessage": "Maintains a temperature of 37 C with controlled humidity for optimal ImmunoCAP™ and EliA™ testing conditions",
+                "infotext": [
+                    "Provides consistent, stable testing conditions"
+                ]
             },
             {
                 "video": "Phadia200_HotSpot_04",
                 "visible": true,
                 "position": [0.16, -0.54, 0.17],
-                "headline": "Reagent Loading, ImmunoCAP and EliA Carrier Loading and Starting the Run",
+                "headline": "Reagent Loading, ImmunoCAP™ and EliA™ Carrier Loading and Starting the Run",
                 "text": "Less than 15 minutes operator time needed to set up the system and start the run to produce up to 192 tests/8 hour shift",
                 "valuemessage": "Less than 15 minutes operator time needed to set up the system and start the run to produce up to 192 tests/8 hour shift",
                 "infotext": [
                     "Minimal operator time needed to load reagents and samples",
                     "After less than 15 minutes operator time, the assay run can be started",
                     "Automatic start-up process to prime the system and conduct quality controls",
-                    "Up to 96 ImmunoCAP or 48 EliA test results in each batch, with approximate batch completion time of 4 hours including start up and shut down procedures"
+                    "Up to 96 ImmunoCAP™ or 48 EliA™ test results in each batch, with approximate batch completion time of 4 hours including start up and shut down procedures"
                 ]
             },
             {
                 "video": "Phadia200_HotSpot_05",
                 "visible": true,
                 "position": [0.03, 0.26, 0.90],
-                "headline": "Automated ImmunoCAP and EliA Test Well Carrier Identification and Dispensing",
+                "headline": "Automated ImmunoCAP™ and EliA™ Test Well Carrier Identification and Dispensing",
                 "text": "Reduces hands-on time, minimizes errors and provides full traceability for every test",
                 "valuemessage": "Reduces hands-on time, minimizes errors and provides full traceability for every test",
                 "infotext": [
                     "Automated barcode scanning for identification and traceability of every test",
-                    "Automated dispensing of ImmunoCAP and EliA wells, no hands-on time for test dispensing",
+                    "Automated dispensing of ImmunoCAP™ and EliA™ wells, no hands-on time for test dispensing",
                     "Increases productivity and minimizes operator errors"
                 ]
             },
@@ -947,8 +949,8 @@
                 "visible": true,
                 "position": [0.46, -0.03, 0.6225],
                 "headline": "Test Carrier Loading and Reflex Testing",
-                "text": "ImmunoCAP and Elia removable test carrier trays hold up to 96 varriers in one tray and are automatically scanned for full traceability",
-                "valuemessage": "ImmunoCAP and Elia removable test carrier trays hold up to 96 varriers in one tray and are automatically scanned for full traceability",
+                "text": "ImmunoCAP™ and EliA™ removable test carrier trays hold up to 96 varriers in one tray and are automatically scanned for full traceability",
+                "valuemessage": "ImmunoCAP™ and EliA™ removable test carrier trays hold up to 96 varriers in one tray and are automatically scanned for full traceability",
                 "infotext": [
                     "Carrier trays are removable to enable refrigeration between runs",
                     "Load up to 96 test carriers in one tray",
@@ -970,7 +972,7 @@
         "camSensorSize": "20.12",
         "imageSize": [1275, 988],
         "headline": "Phadia 250 System",
-        "text": "Automating the performance of EliA and ImmunoCAP assays designed to aid in the diagnosis of autoimmune and IgE mediated disorders",
+        "text": "Automating the performance of EliA™ and ImmunoCAP™ assays designed to aid in the diagnosis of autoimmune and IgE mediated disorders",
         "hotspots": [{
                 "video": "Phadia250_HotSpot_01",
                 "visible": true,
@@ -979,9 +981,9 @@
                 "text": "Automated reflex testing reduces unnecessary tests and hands-on time by enabling automatic follow up testing according to the laboratory's routines.",
                 "valuemessage": "Automated reflex testing reduces unnecessary tests and hands-on time by enabling automatic follow up testing according to the laboratory's routines.",
                 "infotext": [
-                    "Automated reflex testing for both ImmunoCAP(tmp char) and EliA assays if the first test result is positive",
-                    "ImmunoCAP mixes can be followed up by testing with ImmunoCAP whole allergens",
-                    "ImmunoCAP whole allergens can be followed up by testing with ImmunoCAP allergen components"
+                    "Automated reflex testing for both ImmunoCAP(tmp char) and EliA™ assays if the first test result is positive",
+                    "ImmunoCAP™ mixes can be followed up by testing with ImmunoCAP™ whole allergens",
+                    "ImmunoCAP™ whole allergens can be followed up by testing with ImmunoCAP™ allergen components"
                 ]
             },
             {
@@ -994,8 +996,8 @@
                 "infotext": [
                     "Storage compartment for 14-day on board storage",
                     "2 bottle each of development and stop solution",
-                    "Stop solution: 185 ImmunoCAP or 560 EliA determinations per bottle",
-                    "Development solution: 315 ImmunoCAP or 170 EliA determinations per bottle",
+                    "Stop solution: 185 ImmunoCAP™ or 560 EliA™ determinations per bottle",
+                    "Development solution: 315 ImmunoCAP™ or 170 EliA™ determinations per bottle",
                     "Automated tracking of expiration date and number of remaining determinations"
                 ]
             },
@@ -1009,9 +1011,9 @@
                 "infotext": [
                     "Loading trays can be filled at a time and location suitable to the operator",
                     "Up to 38 test carriers per loading tray",
-                    "Storage capacity for 180 ImmunoCAP and EliA carriers (2880 tests)",
+                    "Storage capacity for 180 ImmunoCAP™ and EliA™ carriers (2880 tests)",
                     "Automatic loading with bar-code scanning ensures full traceability",
-                    "Temperature-controlled storage for onboard storage with the full shelf life for ImmunoCAP tests and up to 28 days for EliA tests"
+                    "Temperature-controlled storage for onboard storage with the full shelf life for ImmunoCAP™ tests and up to 28 days for EliA™ tests"
                 ]
             },
             {
@@ -1019,21 +1021,21 @@
                 "visible": true,
                 "position": [-0.33, -0.26, 0.67],
                 "headline": "Climate-Controlled Processing Chamber",
-                "text": "Maintains a stable temperature of 37 C for optimal ImmunoCAP and EliA testing conditions",
-                "valuemessage": "Maintains a stable temperature of 37 C for optimal ImmunoCAP and EliA testing conditions",
+                "text": "Maintains a stable temperature of 37 C for optimal ImmunoCAP™ and EliA™ testing conditions",
+                "valuemessage": "Maintains a stable temperature of 37 C for optimal ImmunoCAP™ and EliA™ testing conditions",
                 "infotext": [
-                    "Provides consistent optimal testing confitions and reliable results for over 600 (CE)/200 (US) ImmunoCAP and over 50(CE)/30(US) EliA tests"
+                    "Provides consistent optimal testing confitions and reliable results for over 600 (CE)/200 (US) ImmunoCAP™ and over 50(CE)/30(US) EliA™ tests"
                 ]
             },
             {
                 "video": "Phadia250_HotSpot_05",
                 "visible": true,
                 "position": [-0.27, -0.30, 0.48],
-                "headline": "Barcode Scanning of Sample Racls, Samples ImmunoCAP and EliA Carriers and Reagents",
+                "headline": "Barcode Scanning of Sample Racls, Samples ImmunoCAP™ and EliA™ Carriers and Reagents",
                 "text": "Full traceability to ensure patient safety and minimize risks of manual errors",
                 "valuemessage": "Full traceability to ensure patient safety and minimize risks of manual errors",
                 "infotext": [
-                    "Automated barcode scanning of sample racks, patient samples, QC tubes, ImmunoCAP and EliA tests",
+                    "Automated barcode scanning of sample racks, patient samples, QC tubes, ImmunoCAP™ and EliA™ tests",
                     "Integrated bar code scanner to register system reagent information",
                     "Two-way LIS communication based on the sample ID",
                     "Tests can be automatically downloaded from the LIS system supported by ASTM and HL7 LIS protocols"
@@ -1056,7 +1058,7 @@
                 "video": "Phadia250_HotSpot_07",
                 "visible": true,
                 "position": [-0.12, -0.32, 0.60],
-                "headline": "Loading of Reagents, ImmunoCAP and EliA Carriers, and Samples, and Starting the Run",
+                "headline": "Loading of Reagents, ImmunoCAP™ and EliA™ Carriers, and Samples, and Starting the Run",
                 "text": "Less than 15 minutes operator time is needed to set up the system and start the run to produce up to 60 tests/hour",
                 "valuemessage": "Less than 15 minutes operator time is needed to set up the system and start the run to produce up to 60 tests/hour",
                 "infotext": [
@@ -1077,7 +1079,7 @@
                     "Calibration curve valid for 28 days for all methods, combined with daily curve control strips",
                     "Curve controls and conjugates to allow six methods to be run in parallel",
                     "Up to six bottles of conjugate, sufficient for up to 2,400 test determinations",
-                    "Cooled storage allows 7 day on-board storage of ImmunoCAP conjugate and on day for EliA, reduces the need for storage space and operator hands-on time",
+                    "Cooled storage allows 7 day on-board storage of ImmunoCAP™ conjugate and on day for EliA, reduces the need for storage space and operator hands-on time",
                     "Automated tracking of expiration dates and number of determinations remaining in the conjugate bottles",
                     "6 point calibration curves for most tests can reduce the laboratory's need to perform calibration verification studies"
                 ]
@@ -1092,7 +1094,7 @@
                 "infotext": [
                     "The diluent storage holds six bottles of diluent, enabling automatic on-board dilution in the integrated disposable plates with 192 dilution wells",
                     "Dilution can be performed in the range of 1:2 to 1:200",
-                    "Automatic re-run of tests if test result is above measuring range for EliA tests",
+                    "Automatic re-run of tests if test result is above measuring range for EliA™ tests",
                     "Functionality to configure Phadia Prime to automatically dilute and re-run tests if the first test result is above measuring range"
                 ]
             },
@@ -1154,12 +1156,12 @@
                 "video": "Phadia1000_HotSpot_02",
                 "visible": true,
                 "position": [-0.46, 0.35, 0.78],
-                "headline": "Calibrator Positions, ImmunoCAP Test Carrier Storage and QC Positions",
+                "headline": "Calibrator Positions, ImmunoCAP™ Test Carrier Storage and QC Positions",
                 "text": "Run up to 3 different test methods in parallel with dedicated calibrators and curve controls allowing up to 600 different tests in one assay run with all reagents on board",
                 "valuemessage": "Run up to 3 different test methods in parallel with dedicated calibrators and curve controls allowing up to 600 different tests in one assay run with all reagents on board",
                 "infotext": [
                     "Curve controls and conjugates to allow 3 methods to be run in parallel",
-                    "ImmunoCAP product portfolio contains more than 600 whole allergens and allergen components"
+                    "ImmunoCAP™ product portfolio contains more than 600 whole allergens and allergen components"
                 ]
             },
             {
@@ -1170,9 +1172,9 @@
                 "text": "The Phadia 1000 instrument allows all necessary tests to be stored onboard to avoid interruptions during operation",
                 "valuemessage": "The Phadia 1000 instrument allows all necessary tests to be stored onboard to avoid interruptions during operation",
                 "infotext": [
-                    "Storage capacity for up to 600 ImmunoCAP carriers (9600 tests)",
-                    "Automated ImmunoCAP carrier identification to ensure test accuracy and full traceability",
-                    "The temperature controlled storage chamber enables storage for the full ImmunoCAP shelf life and the tracking of expiration dates"
+                    "Storage capacity for up to 600 ImmunoCAP™ carriers (9600 tests)",
+                    "Automated ImmunoCAP™ carrier identification to ensure test accuracy and full traceability",
+                    "The temperature controlled storage chamber enables storage for the full ImmunoCAP™ shelf life and the tracking of expiration dates"
                 ]
             },
             {
@@ -1209,13 +1211,13 @@
                 "visible": true,
                 "position": [0.11, -0.21, 0.76],
                 "headline": "Climate-Controlled Processing Chambers",
-                "text": "Temperature-controlled reaction chambers facilitate outstanding performance for ImmunoCAP tests",
-                "valuemessage": "Temperature-controlled reaction chambers facilitate outstanding performance for ImmunoCAP tests",
+                "text": "Temperature-controlled reaction chambers facilitate outstanding performance for ImmunoCAP™ tests",
+                "valuemessage": "Temperature-controlled reaction chambers facilitate outstanding performance for ImmunoCAP™ tests",
                 "infotext": [
                     "Provides consistent optimal testing confitions and reliable results",
-                    "ImmunoCAP tests can be run on all Phadia(tm chgar) instruments, providing full flexibility to meet the needs of your laboratory",
-                    "Results from ImmunoCAP testing have been referenced in more than 4000 scientific papers",
-                    "Over 2 billion ImmunoCAP tests have been performed globally since the inception of ImmunoCAP testing over 20 years ago"
+                    "ImmunoCAP™ tests can be run on all Phadia(tm chgar) instruments, providing full flexibility to meet the needs of your laboratory",
+                    "Results from ImmunoCAP™ testing have been referenced in more than 4000 scientific papers",
+                    "Over 2 billion ImmunoCAP™ tests have been performed globally since the inception of ImmunoCAP™ testing over 20 years ago"
                 ]
             },
             {
@@ -1235,11 +1237,11 @@
                 "video": "Phadia1000_HotSpot_08",
                 "visible": true,
                 "position": [0.17, -0.46, 0.46],
-                "headline": "Barcode Scanning of Sample Racks, Samples, ImmunoCAP Carriers and Reagents",
+                "headline": "Barcode Scanning of Sample Racks, Samples, ImmunoCAP™ Carriers and Reagents",
                 "text": "Full traceability to ensure patient safety and minimizing risks of manual errors",
                 "valuemessage": "Full traceability to ensure patient safety and minimizing risks of manual errors",
                 "infotext": [
-                    "Automated barcode scanning of sample racks, patient samples, QC tubes and ImmunoCAP tests",
+                    "Automated barcode scanning of sample racks, patient samples, QC tubes and ImmunoCAP™ tests",
                     "Integrated barcode scanner to register system reagent information",
                     "Two-way LIS communication based on sameple ID",
                     "Test can be automatically downloaded from the LIS system supported by ASTM and HL7 LIS protocols"
