Modified file names for all mp4s in Phadia 200

--- a/index.html
+++ b/index.html
@@ -650,6 +650,10 @@
             display: table-row
         }
 
+        .deviceTile img {
+            vertical-align: middle;
+        }
+
 
         </style>
 </head>
@@ -837,9 +841,7 @@
                 </div>
                 <div class="col-md-8 col-xs-8" style="padding-right: 0px; margin-right: -2%;">
                     <div class='deviceTile col-xs-5 tile' data-device-id="1" data-device-data-id="#phadia200-data" data-device-file-select="Phadia200_360_Rotation" data-device-hotspot-select="Phadia200_HotSpot" data-device-folder-id="1" data-device-title="Phadia 200 System" data-disclaimer="Not Availible in the US" data-start-x="0">
-                        <span>
-                            <img src="./assets/1/carousel.png" class="img-responsive center-block"/>
-                        </span>
+                        <img src="./assets/1/carousel.png" class="img-responsive"/>
                     </div>
                     <div class='deviceTile col-xs-5 tile' data-device-id="2" data-device-data-id="#phadia250-data" data-device-file-select="Phadia250_360_Rotation" data-device-hotspot-select="Phadia250_HotSpot" data-device-folder-id="2" data-device-title="Phadia 250 System" data-disclaimer="" data-start-x="0">
                         <img src="./assets/2/carousel.png" class="img-responsive center-block"/>
