Made the tiles have background images instead of putting imgs in the divs, easier to center and automatically scales

--- a/index.html
+++ b/index.html
@@ -654,6 +654,52 @@
             vertical-align: middle;
         }
 
+        #phadia200-tile {
+            background-image: url('./assets/1/carousel.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center; 
+        }
+
+        #phadia250-tile {
+            background-image: url('./assets/2/carousel.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center; 
+        }
+
+        #phadia1000-tile {
+            background-image: url('./assets/3/carousel.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center; 
+        }
+
+        #phadia2500-tile {
+            background-image: url('./assets/4/carousel.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center; 
+        }
+
+        #phadiaprimeTile {
+            background-image: url('./assets/PhadiaPrime/carousel.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center; 
+        }
+        #immunocapTile {
+            background-image: url('./assets/ImmunoCap/carousel.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center; 
+        }
+        #eliaTile {
+            background-image: url('./assets/EliA/carousel.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center; 
+        }
 
         </style>
 </head>
@@ -840,28 +886,21 @@
                     <button class="mainMenucloseButton btnSonar closeBtn" onClick="mainMenuClose()"></button>
                 </div>
                 <div class="col-md-8 col-xs-8" style="padding-right: 0px; margin-right: -2%;">
-                    <div class='deviceTile col-xs-5 tile' data-device-id="1" data-device-data-id="#phadia200-data" data-device-file-select="Phadia200_360_Rotation" data-device-hotspot-select="Phadia200_HotSpot" data-device-folder-id="1" data-device-title="Phadia 200 System" data-disclaimer="Not Availible in the US" data-start-x="0">
-                        <img src="./assets/1/carousel.png" class="img-responsive"/>
+                    <div class='deviceTile col-xs-5 tile' data-device-id="1" data-device-data-id="#phadia200-data" data-device-file-select="Phadia200_360_Rotation" data-device-hotspot-select="Phadia200_HotSpot" data-device-folder-id="1" data-device-title="Phadia 200 System" data-disclaimer="Not Availible in the US" data-start-x="0" id="phadia200-tile">
                     </div>
-                    <div class='deviceTile col-xs-5 tile' data-device-id="2" data-device-data-id="#phadia250-data" data-device-file-select="Phadia250_360_Rotation" data-device-hotspot-select="Phadia250_HotSpot" data-device-folder-id="2" data-device-title="Phadia 250 System" data-disclaimer="" data-start-x="0">
-                        <img src="./assets/2/carousel.png" class="img-responsive center-block"/>
+                    <div class='deviceTile col-xs-5 tile' data-device-id="2" data-device-data-id="#phadia250-data" data-device-file-select="Phadia250_360_Rotation" data-device-hotspot-select="Phadia250_HotSpot" data-device-folder-id="2" data-device-title="Phadia 250 System" data-disclaimer="" data-start-x="0" id="phadia250-tile">
                     </div>
-                    <div class='deviceTile col-xs-5 tile' data-device-id="3" data-device-data-id="#phadia1000-data" data-device-file-select="Phadia1000_360_Rotation" data-device-hotspot-select="Phadia1000_HotSpot" data-device-folder-id="3" data-device-title="Phadia 1000 System" data-disclaimer="" data-start-x="0">
-                        <img src="./assets/3/carousel.png" class="img-responsive center-block"/>
+                    <div class='deviceTile col-xs-5 tile' data-device-id="3" data-device-data-id="#phadia1000-data" data-device-file-select="Phadia1000_360_Rotation" data-device-hotspot-select="Phadia1000_HotSpot" data-device-folder-id="3" data-device-title="Phadia 1000 System" data-disclaimer="" data-start-x="0" id="phadia1000-tile">
                     </div>
-                    <div class='deviceTile col-xs-5 tile' data-device-id="4" data-device-data-id="#phadia2500-data" data-device-folder-id="4">
-                        <img src="./assets/4/carousel.png" class="img-responsive center-block"/>
+                    <div class='deviceTile col-xs-5 tile' data-device-id="4" data-device-data-id="#phadia2500-data" data-device-folder-id="4" id="phadia2500-tile">
                     </div>
                 </div>
                 <div class="col-md-4 col-xs-4 side-row">
                     <div  id="phadiaprimeTile" class="primeTile sideTile col tile" data-device="">
-                        <img src="./assets/PhadiaPrime/carousel.png" class="img-responsive center-block"/>
                     </div>
                     <div id="immunocapTile" class="itemTile sideTile col tile" data-video-url="assets/ImmunoCap/Phadia_ImmunoCAP.mp4" data-video-type="video/mp4">
-                        <img src="./assets/ImmunoCap/carousel.png" class="img-responsive center-block"/>
                     </div>
                     <div id="eliaTile" class="itemTile sideTile col tile" data-video-url="assets/EliA/Phadia_ELIA.mp4" data-video-type="video/mp4">
-                        <img src="./assets/EliA/carousel.png" class="img-responsive center-block"/>
                     </div>
                     
                 </div>
