--- a/index.html
+++ b/index.html
@@ -138,10 +138,16 @@
         }
 
         div.itemTile {  background: rgb(0,0,0, 0.5); margin: 2%; box-shadow: 0 1px 2px rgb(0, 0, 0); }
-        div.deviceTile {  background: rgb(0,0,0, 0.5); margin: 2%; box-shadow: 0 1px 2px rgb(0, 0, 0); height: 32vh; width: 22vw;}
+        div.deviceTile {  
+            background-color: rgba(0,0,0, 0.5); 
+            margin: 2%; 
+            box-shadow: 0 1px 2px rgb(0, 0, 0); 
+            height: 32vh; 
+            width: 22vw;
+        }
         div.deviceTile:active {transform: translateY(2px); border-color: white; border-width: 3px; border-style: solid;}
         div.primeItemTile { margin: 1%; width: 23%}
-        div.primeTile {  background: rgb(0,0,0, 0.5); margin: 2%; box-shadow: 0 1px 2px rgb(0, 0, 0); }
+        div.primeTile {  background-color: rgba(0,0,0, 0.5); margin: 2%; box-shadow: 0 1px 2px rgb(0, 0, 0); }
         #tileVideo {
             width: 100%;
             height: 100%;
@@ -268,7 +274,6 @@
         #mainMenuCont {
             position: absolute;
             bottom:-1000px;
-            left: 12.5vw;
         }
 
         /*div.topRow {padding-top: 20px;}*/
@@ -473,7 +478,6 @@
 
         #mainMenuCont {
             width: 75vw;
-            margin: 0 auto;
         }
 
         .tileContainer {
