Changed the itemTile to background color

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     user-select: none;
         }
 
-        div.itemTile {  background: rgb(0,0,0, 0.5); margin: 2%; box-shadow: 0 1px 2px rgb(0, 0, 0); }
+        div.itemTile {  background-color: rgba(0,0,0, 0.5); margin: 2%; box-shadow: 0 1px 2px rgb(0, 0, 0); }
         div.deviceTile {  
             background-color: rgba(0,0,0, 0.5); 
             margin: 2%; 
