Renamed all the video files

--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@
                 "text": "Automated reflex testing reduces unnecessary tests and hands-on time by enabling automatic follow up testing according to the laboratory's routines.",
                 "valuemessage": "Automated reflex testing reduces unnecessary tests and hands-on time by enabling automatic follow up testing according to the laboratory's routines.",
                 "infotext": [
-                    "Automated reflex testing for both ImmunoCAP(tmp char) and EliA™ assays if the first test result is positive",
+                    "Automated reflex testing for both ImmunoCAP™ and EliA™ assays if the first test result is positive",
                     "ImmunoCAP™ mixes can be followed up by testing with ImmunoCAP™ whole allergens",
                     "ImmunoCAP™ whole allergens can be followed up by testing with ImmunoCAP™ allergen components"
                 ]
