--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="./js/jquery.mobile.custom.js"></script> 
     <!-- <script type="text/javascript" src="./js/jquery.mobile-1.4.5/jquery.mobile-1.4.5.js"></script> -->
     <script type="text/javascript" src="./js/index.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet"> 
 
     <title>Thermo Fisher - Phadia Laboratory Systems</title>
     
@@ -744,7 +745,8 @@
         /* Element | file:///D:/Coding/Javacript/PhadiaWeb/index.html */
 
         #additionalResourceBtn > p:nth-child(1) {
-          font-weight: lighter;
+          font-weight: 100;
+          font-family: 'Open Sans', sans-serif;
         }
 
         /* Element | file:///D:/Coding/Javacript/PhadiaWeb/index.html */
