Fixed additional resource text to the png that came with the assets

--- a/index.html
+++ b/index.html
@@ -807,17 +807,9 @@
             display: inline-block; 
         }
 
-
-        #deviceTitle {
-            text-align: center;
-            margin-top: 10vh;
-            margin-bottom: -11vh;
-            height: 15%;
-        }
-
         #infoHeaderText {
             height: 25vh;
-            margin-top: 10vh;
+            margin-top: 8vh;
             margin-left: -5%;
             margin-right: 6%;
             display: block;
@@ -897,9 +889,9 @@
                             <img id="playHotspot" src="./assets/buttons/play_hotspot.png" class="img-responsive center-block" style="display: none;">
                         </div>
                     </div>
-                    <div class="row" style="position: absolute; bottom: 5%; width: 100%;">
+                    <div class="row" style="position: absolute; bottom: 3%; width: 100%;">
                         <div class="col" id="additionalResourceBtn">
-                            <p style="color:#fff; font-size: 3vh;">Additional Resources</p>
+                            <img src="./assets/buttons/additional_resources.png" class="img-responsive center-block">
                         </div>
                     </div>
                 </div>
