Fixed the alignment of the instruments

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         div.leftBorder { border-left: solid 1px gray; }
         
         div.animDivs {  }
-        div.videContCell { text-align:center; height: 65vh; width: 100%; top: 10vh; position: relative;} /*height was 100% */
+        div.videContCell { text-align:center; height: 65vh; width: 100%; top: 4vh; position: relative;} /*height was 100% */
         div.videContBlock { display:inline-block; height: 100%; width: 100%}
         div.videoContainer { position: relative; }
         div.videoCont {  position:relative; text-align:center; width:100% }
@@ -372,10 +372,10 @@
         }
 
         #deviceTitle {
-         text-align: center;
-         margin-top: 5%;
-         margin-bottom: -10%;
-         height: 15%;
+            text-align: center;
+            margin-top: 5vh;
+            margin-bottom: -8vh;
+            height: 15%;
         }
 
         @media only screen and (width: 1440px) {
