--- a/index.html
+++ b/index.html
@@ -486,7 +486,8 @@
 
         @media only screen and (min-width: 768px) {
             div.primeItemTile { 
-                width: 19% 
+                width: 15vw;
+                height: 17vh; 
             }
 
             div.tileContainer {
@@ -844,6 +845,131 @@
             margin: 2%;
         }
 
+        #primeBtn1 {
+            background-image: url('./assets/PhadiaPrime/pp_button-1.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-color: rgb(0, 0, 0); 
+            margin: 2%;
+        }
+
+        #primeBtn2 {
+            background-image: url('./assets/PhadiaPrime/pp_button-2.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-color: rgb(0, 0, 0); 
+            margin: 2%;
+        }
+
+        #primeBtn3 {
+            background-image: url('./assets/PhadiaPrime/pp_button-3.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-color: rgb(0, 0, 0); 
+            margin: 2%;
+        }
+
+        #primeBtn4 {
+            background-image: url('./assets/PhadiaPrime/pp_button-4.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-color: rgb(0, 0, 0); 
+            margin: 2%;
+        }
+
+        #primeBtn5 {
+            background-image: url('./assets/PhadiaPrime/pp_button-5.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-color: rgb(0, 0, 0); 
+            margin: 2%;
+        }
+
+        #primeBtn6 {
+            background-image: url('./assets/PhadiaPrime/pp_button-6.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-color: rgb(0, 0, 0); 
+            margin: 2%;
+        }
+
+        #primeBtn7 {
+            background-image: url('./assets/PhadiaPrime/pp_button-7.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-color: rgb(0, 0, 0); 
+            margin: 2%;
+        }
+
+        #primeBtn8 {
+            background-image: url('./assets/PhadiaPrime/pp_button-8.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-color: rgb(0, 0, 0); 
+            margin: 2%;
+        }
+
+        #primeBtn9 {
+            background-image: url('./assets/PhadiaPrime/pp_button-9.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-color: rgb(0, 0, 0); 
+            margin: 2%;
+        }
+
+        #primeBtn10 {
+            background-image: url('./assets/PhadiaPrime/pp_button-10.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-color: rgb(0, 0, 0); 
+            margin: 2%;
+        }
+
+        #primeBtn11 {
+            background-image: url('./assets/PhadiaPrime/pp_button-11.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-color: rgb(0, 0, 0); 
+            margin: 2%;
+        }
+
+        #primeBtn12 {
+            background-image: url('./assets/PhadiaPrime/pp_button-12.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-color: rgb(0, 0, 0); 
+            margin: 2%;
+        }
+
+        #primeBtn13 {
+            background-image: url('./assets/PhadiaPrime/pp_button-13.png');
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            background-color: rgb(0, 0, 0); 
+            margin: 2%;
+        }
+
+        .primeImgTile {
+            height: 100%;
+        }
+
+        .edgeTile {
+            height: 100%;
+        }
+
         </style>
 </head>
 
@@ -946,43 +1072,43 @@
             </div>
             <div class="row tileContainer">
                 <div class='primeItemTile col-xs-3'>
-                    <img src="./assets/PhadiaPrime/pp_button-1.png" class="img-responsive center-block primeImgTile" data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Consumables.mp4" data-video-type="video/mp4"/>
+                    <div id="primeBtn1" class="img-responsive center-block primeImgTile" data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Consumables.mp4" data-video-type="video/mp4"></div>
                 </div>
                 <div class='primeItemTile col-xs-3'>
-                    <img src="./assets/PhadiaPrime/pp_button-2.png" class="img-responsive center-block primeImgTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Managing_Request.mp4" data-video-type="video/mp4"/>
+                    <div id="primeBtn2" class="img-responsive center-block primeImgTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Managing_Request.mp4" data-video-type="video/mp4"></div>
                 </div>
                 <div class='primeItemTile col-xs-3'>
-                    <img src="./assets/PhadiaPrime/pp_button-3.png" class="img-responsive center-block primeImgTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Connectivity.mp4" data-video-type="video/mp4"/>
+                    <div id="primeBtn3" class="img-responsive center-block primeImgTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Connectivity.mp4" data-video-type="video/mp4"></div>
                 </div>
                 <div class='primeItemTile col-xs-3'>
-                    <img src="./assets/PhadiaPrime/pp_button-4.png" class="img-responsive center-block edgeTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_DataBases.mp4" data-video-type="video/mp4"/>
+                    <div id="primeBtn4" class="img-responsive center-block edgeTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_DataBases.mp4" data-video-type="video/mp4"></div>
                 </div>
                 <div class='primeItemTile col-xs-3'>
-                    <img src="./assets/PhadiaPrime/pp_button-5.png" class="img-responsive center-block primeImgTile" data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_EventLog.mp4" data-video-type="video/mp4"/>
+                    <div id="primeBtn5" class="img-responsive center-block primeImgTile" data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_EventLog.mp4" data-video-type="video/mp4"></div>
                 </div>
                 <div class='primeItemTile col-xs-3'>
-                    <img src="./assets/PhadiaPrime/pp_button-6.png" class="img-responsive center-block primeImgTile" data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Help_And_Search.mp4" data-video-type="video/mp4"/>
+                    <div id="primeBtn6" class="img-responsive center-block primeImgTile" data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Help_And_Search.mp4" data-video-type="video/mp4"></div>
                 </div>
                 <div class='primeItemTile col-xs-3'>
-                    <img src="./assets/PhadiaPrime/pp_button-7.png" class="img-responsive center-block primeImgTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Lab_Community.mp4" data-video-type="video/mp4"/>
+                    <div id="primeBtn7" class="img-responsive center-block primeImgTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Lab_Community.mp4" data-video-type="video/mp4"></div>
                 </div>
                 <div class='primeItemTile col-xs-3'>
-                    <img src="./assets/PhadiaPrime/pp_button-8.png" class="img-responsive center-block edgeTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Outsourced_Tests.mp4" data-video-type="video/mp4"/>
+                    <div id="primeBtn8" class="img-responsive center-block edgeTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Outsourced_Tests.mp4" data-video-type="video/mp4"></div>
                 </div>
                 <div class='primeItemTile col-xs-3'>
-                    <img src="./assets/PhadiaPrime/pp_button-9.png" class="img-responsive center-block primeImgTile" data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Settings.mp4" data-video-type="video/mp4"/>
+                    <div id="primeBtn9" class="img-responsive center-block primeImgTile" data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Settings.mp4" data-video-type="video/mp4"></div>
                 </div>
                 <div class='primeItemTile col-xs-3'>
-                    <img src="./assets/PhadiaPrime/pp_button-10.png" class="img-responsive center-block primeImgTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Results.mp4" data-video-type="video/mp4"/>
+                    <div id="primeBtn10" class="img-responsive center-block primeImgTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Results.mp4" data-video-type="video/mp4"></div>
                 </div>
                 <div class='primeItemTile col-xs-3'>
-                    <img src="./assets/PhadiaPrime/pp_button-11.png" class="img-responsive center-block primeImgTile" data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Rack.mp4" data-video-type="video/mp4"/>
+                    <div id="primeBtn11" class="img-responsive center-block primeImgTile" data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Rack.mp4" data-video-type="video/mp4"></div>
                 </div>
                 <div class='primeItemTile col-xs-3'>
-                    <img src="./assets/PhadiaPrime/pp_button-12.png" class="img-responsive center-block edgeTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Quality.mp4" data-video-type="video/mp4"/>
+                    <div id="primeBtn12" class="img-responsive center-block edgeTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Quality.mp4" data-video-type="video/mp4"></div>
                 </div>
                 <div class='primeItemTile col-xs-3'>
-                    <img src="./assets/PhadiaPrime/pp_button-13.png" class="img-responsive center-block primeImgTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_StockManager.mp4" data-video-type="video/mp4"/>
+                    <div id="primeBtn13" class="img-responsive center-block primeImgTile"  data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_StockManager.mp4" data-video-type="video/mp4"></div>
                 </div>
             </div>
         </div>
